Cleaned up several tests